Fix layout bug in zoomed object popups

--- a/css/default.css
+++ b/css/default.css
@@ -3229,6 +3229,13 @@ body.directory-index #disqus_thread {
 .popup.object.zoomed .popframe-content-view,
 .popup.local-code-file.zoomed .popframe-content-view {
 	max-width: unset;
+    height: 100%;
+}
+
+.popup.object.zoomed iframe,
+.popup.object.zoomed object {
+    width: 100%;
+    height: 100%;
 }
 
 /*┌───────────────────────────┐*/
